--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
